# Extender-Cellular-Analyzer

./: .gitignore  2_output.json  2_output.pcap  2_output.txt  CHANGELOG.md  CLEANUP_SUMMARY.md  LIVE_CAPTURE_STATUS.txt  PROJECT_STATUS.txt  README.md  SCAT_Feature_Test_Documentation.md  example.txt  output_head_1000.txt  run_parser.sh
docs/: ALL_FORMATS_VERIFICATION.md  FULL_QCAT_PARITY_COMPLETE.md  LIVE_CAPTURE_GUIDE.md  PROJECT_SUMMARY.md  QUICK_START.md  live_capture.md
qmdl-offline-parser/: .gitignore  FEATURE_TESTING.md  README.md  enhanced_qmdl_parser.py  pyproject.toml  test_basic.py  test_direct.py
qmdl-offline-parser/src/scat/: main.py  util.py
qmdl-offline-parser/src/scat/iodevices/: __init__.py  fileio.py  liveio.py  serialio.py  tcpio.py  usbio.py
qmdl-offline-parser/src/scat/parsers/: enhanced_qualcomm_parser.py
qmdl-offline-parser/src/scat/parsers/qualcomm/: diagcommoneventparser.py  diagcomprehensivelogparser.py  diaggnsslogparser.py  diaglteeventparser.py  diagltelogparser.py  diagqcatmsgparser.py  diagrflogparser.py  diagumtsnaslogparser.py  diagunknownlogparser.py  diagwcdmaenhancedlogparser.py  diagwcdmasignalingparser.py  qualcommparser.py
qmdl-offline-parser/src/scat/writers/: __init__.py  jsonwriter.py  nullwriter.py  pcapwriter.py  qcat_txtwriter.py  rawwriter.py  socketwriter.py  txtwriter.py
qmdl-offline-parser/tests/: test_event_decoders.py
scripts/: README.md  detect_adb_diag.sh  forward_diag_adb.sh  normalize_txt_to_example.py
